# r_cuda_1

./: CMakeLists.txt  kernel_vectores_indice_cercano.cu  main.cpp
